<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="12dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/status"
        android:textColor="@color/dark_gray"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/rgStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rgAlive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/alive"
            android:textColor="@color/dark_gray"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbDead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/dead"
            android:textColor="@color/dark_gray"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbUnknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/unknown"
            android:textColor="@color/dark_gray"
            android:textSize="16sp" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/gender"
        android:textColor="@color/dark_gray"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rgFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/female"
            android:textColor="@color/dark_gray"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/male"
            android:textColor="@color/dark_gray"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbGenderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/genderless"
            android:textColor="@color/dark_gray"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbUnknownGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/unknown"
            android:textColor="@color/dark_gray"
            android:textSize="16sp" />

    </RadioGroup>

    <android.widget.Button
        android:id="@+id/applyButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="10dp"
        android:background="@drawable/custom_apply_button"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/apply"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/clearAllButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:padding="10dp"
        android:text="@string/clear_all"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp" />

</LinearLayout>