<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="12dp">

    <TextView
        android:id="@+id/tvTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/create_group"
        android:textAlignment="center"
        android:textColor="@color/dark_gray"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/custom_group_dialog_description"
        android:textColor="@color/dark_gray"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etGroupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_edit_text"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/group_name"
        android:padding="10dp"
        android:textColor="@color/dark_gray"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_edit_text"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/description"
        android:padding="10dp"
        android:textColor="@color/dark_gray"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etNumberOfCharacter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_edit_text"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/number_of_characters"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="@color/dark_gray"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvInfoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/up_to_5_characters_can_be_selected"
        android:textColor="@color/dark_gray"
        android:textSize="12sp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/createGroupRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

    <TextView
        android:id="@+id/tvSelectCharacterNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        android:text="0/" />

    <TextView
        android:id="@+id/tvMaxSelectCharacterNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        android:text="5"/>
    </LinearLayout>

    <android.widget.Button
        android:id="@+id/createButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:fontFamily="@font/roboto_regular"
        android:textSize="15sp"
        android:background = "@drawable/custom_apply_button"
        android:textColor="@color/white"
        android:layout_marginVertical="15dp"/>

</LinearLayout>