<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".activity.CharacterDetailActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/dark_gray" />

    <RelativeLayout
        android:id="@+id/tollTip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivBackButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:padding="10dp"
            android:src="@drawable/back_button" />

        <TextView
            android:id="@+id/tvCharacterDetailName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_toStartOf="@+id/ivFavorite"
            android:layout_toEndOf="@id/ivBackButton"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_bold"
            android:maxLines="2"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="18sp"
            tools:text="Ants in my Eyes" />

        <ImageView
            android:id="@+id/ivFavorite"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/favorite_icon" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/svDetailItemWrapper"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/tollTip"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivCharacterDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                tools:ignore="UnknownId"
                tools:src="@drawable/character_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivCharacterDetail"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/status"
                    android:textColor="@color/light_gray"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvCharacterStatus"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="4dp"
                        app:cardBackgroundColor="@color/green"
                        app:cardCornerRadius="10dp" />

                    <TextView
                        android:id="@+id/tvCharacterDetailStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/cvCharacterStatus"
                        android:fontFamily="@font/roboto_regular"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:text="Dead" />

                    <TextView
                        android:id="@+id/tvCharacterDetailSpace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/tvCharacterDetailStatus"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/hyphen"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvCharacterDetailSpecies"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/tvCharacterDetailSpace"
                        android:fontFamily="@font/roboto_regular"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:text=" Mythological Creature" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/last_know_location"
                    android:textColor="@color/light_gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvLocationInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    tools:text="Neptia 4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/first_seen_in"
                    android:textColor="@color/light_gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvFirstSeenInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    tools:text="Big Trouble in Little Sanchez" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tvErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:text="Hata"
        android:visibility="gone"/>

</RelativeLayout>